[workspace]

[package]
name = "euler"
version = "0.1.0"
authors = ["abry"]
edition = "2018"

[lib]
name = "common"
path = "src/common.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
term = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
time = "^0.1"
getopts = "^0.2"
failure = "^0.1"
failure_derive = "^0.1"
reqwest = "^0.8"
num-integer = "^0.1"
num = "*"

[dependencies.iterators]
path = "./lib/iterators"